# tile_gemm

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  build_cmake.sh
include/: cuda_utils.h  cutlass_gemm.h  sparse_to_dense.h  tile_gemm.h  tile_reader.h
src/: cutlass_gemm.cu  main.cu  sparse_to_dense.cu  tile_gemm.cu  tile_reader.cpp
test_data/: meta.txt  result.txt
test_data/test_data_A/tile_0/: tile_0.txt
test_data/test_data_A/tile_1/: tile_1.txt
test_data/test_data_A/tile_2/: tile_2.txt
test_data/test_data_A/tile_3/: tile_3.txt
test_data/test_data_B/tile_0/: tile_0.txt
test_data/test_data_B/tile_1/: tile_1.txt
test_data/test_data_B/tile_2/: tile_2.txt
test_data/test_data_B/tile_3/: tile_3.txt
test_data/test_data_B/tile_4/: tile_4.txt
test_data/test_data_B/tile_5/: tile_5.txt
tests/: test_correctness.cu
